--- a/spectra_stat.ipynb
+++ b/spectra_stat.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import glob, os\n",
-    "import re"
+    "import pandas as pd"
    ]
   },
   {
@@ -17,15 +15,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'datasets/Raman-SBN-50-Pt-Si/txt/'\n",
-    "os.chdir(path)\n",
-    "file_names = glob.glob(\"*.txt\")\n",
-    "pattern = '\\d\\d\\dK'"
+    "import spectra_preprocessing as sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = 'datasets/Raman-SBN-50-Pt-Si/txt/'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spectra = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spectra = sp.txt_to_pd(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -223,25 +254,18 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spectra = pd.DataFrame()\n",
-    "for file_name in file_names:\n",
-    "    temp = int(re.search(pattern, file_name).group()[:3])\n",
-    "    spectrum = pd.read_csv(file_name, sep=\"\\t\", header=None, names=[\"Wavenumber\", temp])\n",
-    "    if not(\"Wavenumber\" in spectra.columns):\n",
-    "        spectra[\"Wavenumber\"] = spectrum[\"Wavenumber\"]\n",
-    "    spectra[temp] = spectrum[temp]\n",
     "spectra.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +564,7 @@
        "[8 rows x 42 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
