--- a/Raman-ML.ipynb
+++ b/Raman-ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,9 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from xgboost import XGBClassifier\n",
-    "from sklearn import svm"
+    "from sklearn import svm\n",
+    "\n",
+    "from sklearn.model_selection import cross_val_score, StratifiedKFold"
    ]
   },
   {
@@ -340,26 +342,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/andrey/Projects/Kaggle-Raman-ML/env/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "logreg = LogisticRegression(random_state=17)\n",
+    "logreg = LogisticRegression(random_state=17, solver='lbfgs', max_iter=1000)\n",
     "logreg.fit(X_train, y_train);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +361,7 @@
        "0.6666666666666666"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,26 +381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/andrey/Projects/Kaggle-Raman-ML/env/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "clf = RandomForestClassifier(n_jobs=2, random_state=7)\n",
-    "clf.fit(X_train, y_train);"
+    "rf_clf = RandomForestClassifier(n_estimators=10, n_jobs=2, random_state=7)\n",
+    "rf_clf.fit(X_train, y_train);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -416,14 +400,14 @@
        "0.6666666666666666"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred_holdout_clf = clf.predict(X_holdout)\n",
-    "rf_accuracy = accuracy_score(y_holdout, pred_holdout_clf)\n",
+    "pred_holdout_rf_clf = rf_clf.predict(X_holdout)\n",
+    "rf_accuracy = accuracy_score(y_holdout, pred_holdout_rf_clf)\n",
     "rf_accuracy"
    ]
   },
@@ -509,12 +493,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Качество моделей"
+    "### Качество моделей (оценка на основе отложенной выборки)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -575,13 +559,113 @@
        "accuracy  0.833333  0.666667       0.666667  0.666667"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Кросс-валидация"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skf = StratifiedKFold(n_splits = 5, random_state=1, shuffle = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_cvs = cross_val_score(clf_svm, X, y, scoring='accuracy', cv = skf).mean()\n",
+    "xgb_cvs = cross_val_score(xgbc, X, y, scoring='accuracy', cv = skf).mean()\n",
+    "logreg_cvs = cross_val_score(logreg, X, y, scoring='accuracy', cv = skf).mean()\n",
+    "rf_cvs = cross_val_score(rf_clf, X, y, scoring='accuracy', cv = skf).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_cvs = pd.DataFrame({\n",
+    "    'xgboost': [xgb_cvs],\n",
+    "    'logreg': [logreg_cvs],\n",
+    "    'random forest': [rf_cvs],\n",
+    "    'SVM': [svm_cvs]\n",
+    "    }, index=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>xgboost</th>\n",
+       "      <th>logreg</th>\n",
+       "      <th>random forest</th>\n",
+       "      <th>SVM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>accuracy</th>\n",
+       "      <td>0.613333</td>\n",
+       "      <td>0.436667</td>\n",
+       "      <td>0.536667</td>\n",
+       "      <td>0.553333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           xgboost    logreg  random forest       SVM\n",
+       "accuracy  0.613333  0.436667       0.536667  0.553333"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_cvs"
    ]
   },
   {
