--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +93,424 @@
     "df_innerArm = pd.read_csv(\"datasets/innerArm.csv\")\n",
     "df_thumbNail = pd.read_csv(\"datasets/thumbNail.csv\")\n",
     "df_vein = pd.read_csv(\"datasets/vein.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patientID</th>\n",
+       "      <th>has_DM2</th>\n",
+       "      <th>Var2</th>\n",
+       "      <th>Var3</th>\n",
+       "      <th>Var4</th>\n",
+       "      <th>Var5</th>\n",
+       "      <th>Var6</th>\n",
+       "      <th>Var7</th>\n",
+       "      <th>Var8</th>\n",
+       "      <th>Var9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Var3152</th>\n",
+       "      <th>Var3153</th>\n",
+       "      <th>Var3154</th>\n",
+       "      <th>Var3155</th>\n",
+       "      <th>Var3156</th>\n",
+       "      <th>Var3157</th>\n",
+       "      <th>Var3158</th>\n",
+       "      <th>Var3159</th>\n",
+       "      <th>Var3160</th>\n",
+       "      <th>Var3161</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ramanShift</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3150</td>\n",
+       "      <td>3151</td>\n",
+       "      <td>3152</td>\n",
+       "      <td>3153</td>\n",
+       "      <td>3154</td>\n",
+       "      <td>3155</td>\n",
+       "      <td>3156</td>\n",
+       "      <td>3157</td>\n",
+       "      <td>3158</td>\n",
+       "      <td>3159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DM201</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>181.800000</td>\n",
+       "      <td>181.800000</td>\n",
+       "      <td>181.800000</td>\n",
+       "      <td>181.800000</td>\n",
+       "      <td>181.800000</td>\n",
+       "      <td>181.800000</td>\n",
+       "      <td>181.800000</td>\n",
+       "      <td>181.800000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DM202</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>162.800000</td>\n",
+       "      <td>162.800000</td>\n",
+       "      <td>162.800000</td>\n",
+       "      <td>162.800000</td>\n",
+       "      <td>162.800000</td>\n",
+       "      <td>162.800000</td>\n",
+       "      <td>162.800000</td>\n",
+       "      <td>162.800000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DM203</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>107.400000</td>\n",
+       "      <td>107.400000</td>\n",
+       "      <td>107.400000</td>\n",
+       "      <td>107.400000</td>\n",
+       "      <td>107.400000</td>\n",
+       "      <td>107.400000</td>\n",
+       "      <td>107.400000</td>\n",
+       "      <td>107.400000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DM204</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>290.166667</td>\n",
+       "      <td>290.166667</td>\n",
+       "      <td>290.166667</td>\n",
+       "      <td>290.166667</td>\n",
+       "      <td>290.166667</td>\n",
+       "      <td>290.166667</td>\n",
+       "      <td>290.166667</td>\n",
+       "      <td>290.166667</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 3162 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    patientID  has_DM2        Var2        Var3        Var4        Var5  \\\n",
+       "0  ramanShift      NaN    0.000000    1.000000    2.000000    3.000000   \n",
+       "1       DM201      1.0  181.800000  181.800000  181.800000  181.800000   \n",
+       "2       DM202      1.0  162.800000  162.800000  162.800000  162.800000   \n",
+       "3       DM203      1.0  107.400000  107.400000  107.400000  107.400000   \n",
+       "4       DM204      1.0  290.166667  290.166667  290.166667  290.166667   \n",
+       "\n",
+       "         Var6        Var7        Var8        Var9  ...  Var3152  Var3153  \\\n",
+       "0    4.000000    5.000000    6.000000    7.000000  ...     3150     3151   \n",
+       "1  181.800000  181.800000  181.800000  181.800000  ...        0        0   \n",
+       "2  162.800000  162.800000  162.800000  162.800000  ...        0        0   \n",
+       "3  107.400000  107.400000  107.400000  107.400000  ...        0        0   \n",
+       "4  290.166667  290.166667  290.166667  290.166667  ...        0        0   \n",
+       "\n",
+       "   Var3154  Var3155  Var3156  Var3157  Var3158  Var3159  Var3160  Var3161  \n",
+       "0     3152     3153     3154     3155     3156     3157     3158     3159  \n",
+       "1        0        0        0        0        0        0        0        0  \n",
+       "2        0        0        0        0        0        0        0        0  \n",
+       "3        0        0        0        0        0        0        0        0  \n",
+       "4        0        0        0        0        0        0        0        0  \n",
+       "\n",
+       "[5 rows x 3162 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_earLobe.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patientID</th>\n",
+       "      <th>has_DM2</th>\n",
+       "      <th>Var2</th>\n",
+       "      <th>Var3</th>\n",
+       "      <th>Var4</th>\n",
+       "      <th>Var5</th>\n",
+       "      <th>Var6</th>\n",
+       "      <th>Var7</th>\n",
+       "      <th>Var8</th>\n",
+       "      <th>Var9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Var3152</th>\n",
+       "      <th>Var3153</th>\n",
+       "      <th>Var3154</th>\n",
+       "      <th>Var3155</th>\n",
+       "      <th>Var3156</th>\n",
+       "      <th>Var3157</th>\n",
+       "      <th>Var3158</th>\n",
+       "      <th>Var3159</th>\n",
+       "      <th>Var3160</th>\n",
+       "      <th>Var3161</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ramanShift</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3150</td>\n",
+       "      <td>3151</td>\n",
+       "      <td>3152</td>\n",
+       "      <td>3153</td>\n",
+       "      <td>3154</td>\n",
+       "      <td>3155</td>\n",
+       "      <td>3156</td>\n",
+       "      <td>3157</td>\n",
+       "      <td>3158</td>\n",
+       "      <td>3159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DM201</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>326.000000</td>\n",
+       "      <td>326.000000</td>\n",
+       "      <td>326.000000</td>\n",
+       "      <td>326.000000</td>\n",
+       "      <td>326.000000</td>\n",
+       "      <td>326.000000</td>\n",
+       "      <td>326.000000</td>\n",
+       "      <td>326.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DM202</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>214.800000</td>\n",
+       "      <td>214.800000</td>\n",
+       "      <td>214.800000</td>\n",
+       "      <td>214.800000</td>\n",
+       "      <td>214.800000</td>\n",
+       "      <td>214.800000</td>\n",
+       "      <td>214.800000</td>\n",
+       "      <td>214.800000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DM203</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>457.800000</td>\n",
+       "      <td>457.800000</td>\n",
+       "      <td>457.800000</td>\n",
+       "      <td>457.800000</td>\n",
+       "      <td>457.800000</td>\n",
+       "      <td>457.800000</td>\n",
+       "      <td>457.800000</td>\n",
+       "      <td>457.800000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DM204</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>181.833333</td>\n",
+       "      <td>181.833333</td>\n",
+       "      <td>181.833333</td>\n",
+       "      <td>181.833333</td>\n",
+       "      <td>181.833333</td>\n",
+       "      <td>181.833333</td>\n",
+       "      <td>181.833333</td>\n",
+       "      <td>181.833333</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 3162 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    patientID  has_DM2        Var2        Var3        Var4        Var5  \\\n",
+       "0  ramanShift      NaN    0.000000    1.000000    2.000000    3.000000   \n",
+       "1       DM201      1.0  326.000000  326.000000  326.000000  326.000000   \n",
+       "2       DM202      1.0  214.800000  214.800000  214.800000  214.800000   \n",
+       "3       DM203      1.0  457.800000  457.800000  457.800000  457.800000   \n",
+       "4       DM204      1.0  181.833333  181.833333  181.833333  181.833333   \n",
+       "\n",
+       "         Var6        Var7        Var8        Var9  ...  Var3152  Var3153  \\\n",
+       "0    4.000000    5.000000    6.000000    7.000000  ...     3150     3151   \n",
+       "1  326.000000  326.000000  326.000000  326.000000  ...        0        0   \n",
+       "2  214.800000  214.800000  214.800000  214.800000  ...        0        0   \n",
+       "3  457.800000  457.800000  457.800000  457.800000  ...        0        0   \n",
+       "4  181.833333  181.833333  181.833333  181.833333  ...        0        0   \n",
+       "\n",
+       "   Var3154  Var3155  Var3156  Var3157  Var3158  Var3159  Var3160  Var3161  \n",
+       "0     3152     3153     3154     3155     3156     3157     3158     3159  \n",
+       "1        0        0        0        0        0        0        0        0  \n",
+       "2        0        0        0        0        0        0        0        0  \n",
+       "3        0        0        0        0        0        0        0        0  \n",
+       "4        0        0        0        0        0        0        0        0  \n",
+       "\n",
+       "[5 rows x 3162 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_innerArm.head()"
    ]
   },
   {
