--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -291,7 +291,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb83e381bd4f41a2a58eb751e8c4aed8",
+       "model_id": "2c5dc36f04434ffa987dfb2ab1d6acb5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -822,6 +822,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Сохраняем данные в pickle-файл"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('X_train.pickle', 'wb') as f:\n",
+    "    pickle.dump(X_train, f)\n",
+    "with open('y_train.pickle', 'wb') as f:\n",
+    "    pickle.dump(y_train, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('X_holdout.pickle', 'wb') as f:\n",
+    "    pickle.dump(X_holdout, f)\n",
+    "with open('y_holdout.pickle', 'wb') as f:\n",
+    "    pickle.dump(y_holdout, f)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -845,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
